--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-console",
+  "name": "simple-color-console",
   "version": "0.0.1",
   "description": "In a simple way, let your node command line print out a colored log.",
   "main": "index.js",
