--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "simple-color-console",
-  "version": "0.2.1",
+  "version": "0.2.9",
+  "types": "./index.d.ts",
   "description": "In a simple way, let your node command line print out a colored log.",
   "main": "index.js",
   "scripts": {
